<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <groupId>com.erliapp</groupId>
  <artifactId>utilities</artifactId>
  <version>0.0.1</version>
  <modelVersion>4.0.0</modelVersion>
  <packaging>jar</packaging>


  <build>
    <defaultGoal>clean install</defaultGoal>
    <plugins>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <configuration>
          <configLocation>google_checks.xml</configLocation>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.3.0</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <artifactId>maven-checkstyle-plugin</artifactId>
      <groupId>org.apache.maven.plugins</groupId>
      <type>maven-plugin</type>
      <version>3.3.0</version>
    </dependency>
    <dependency>
      <artifactId>Date</artifactId>
      <groupId>com.github.agentdid127</groupId>
      <version>0.0.4</version>
    </dependency>
    <dependency>
      <artifactId>gson</artifactId>
      <groupId>com.google.code.gson</groupId>
      <version>2.10.1</version>
    </dependency>
    <dependency>
      <artifactId>sqlite-jdbc</artifactId>
      <groupId>org.xerial</groupId>
      <version>3.40.1.0</version>
    </dependency>
    <dependency>
      <artifactId>java-driver-query-builder</artifactId>
      <groupId>com.datastax.oss</groupId>
      <version>4.17.0</version>
    </dependency>
    <dependency>
      <artifactId>java-driver-core</artifactId>
      <groupId>com.datastax.oss</groupId>
      <version>4.17.0</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.33</version>
    </dependency>
    <dependency>
      <groupId>org.mariadb.jdbc</groupId>
      <artifactId>mariadb-java-client</artifactId>
      <version>3.2.0</version>
    </dependency>

  </dependencies>

  <pluginRepositories>
    <pluginRepository>
      <id>jitpack</id>
      <url>https://jitpack.io</url>
    </pluginRepository>
    <pluginRepository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2</url>
    </pluginRepository>


  </pluginRepositories>

  <properties>
    <argLine>--add-modules java.base --add-opens java.base/sun.security.util=ALL-UNNAMED</argLine>
    <java.version>17</java.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <url>https://repo1.maven.org/maven2</url>
    </repository>
    <repository>
      <id>jitpack</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>


</project>